version/0.17/_sources/api/solver/_autosummary/settings/faces.rst.txt
:orphan:

.. _faces:

faces
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.faces.faces
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

:ref:`list_face <list_face>`                         'list_face' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`faces_child <faces_child>`


.. rubric:: Included in:

==================================   ==================================

Parent                                                          Summary

==================================   ==================================
:ref:`bodies_child <bodies_child>`       'child_object_type' of bodies.

==================================   ==================================

