version/0.20/_sources/api/solver/_autosummary/settings/faces.rst.txt
:orphan:

.. _faces:

faces
=====

.. autoclass:: ansys.fluent.core.solver.settings_241.faces.faces
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

:ref:`list_face <list_face>`                                      'list_face' command.

==========================================   =========================================

.. rubric:: Named object type

:ref:`faces_child <faces_child>`


.. rubric:: Included in:

==================================   ==================================

Parent                                                          Summary

==================================   ==================================
:ref:`bodies_child <bodies_child>`       'child_object_type' of bodies.

==================================   ==================================

